# CMake-Ep023

./: CMakeLists.txt  README.adoc  main.cpp
calculator/: CMakeLists.txt
calculator/include/: calculator.hpp
calculator/src/: calculator.cpp
cmake/: AddCatch2.cmake
test/: CMakeLists.txt
